# palitra

./: .gitignore  CHANGELOG.md  GETTING_STARTED.md  MANIFEST.in  README.md  USAGE_GUIDE.md  __init__.py  main.py  palitra_cli.py  pyproject.toml  pytest.ini  quick_start.py  setup.py  tests.py  tox.ini
.github/workflows/: ci.yml
docs/: apiref.md  comparison.md  faq.md
palitra/: PACKAGE_STRUCTURE.md  __init__.py  __init__.pyi  _core.py  _policy.py  core.py  logging.py  runner.py  runner.pyi  singleton.py  singleton.pyi
palitra/api/: README.md  __init__.py  singleton.py  singleton.pyi
palitra/core/: README.md  __init__.py  runner.py
palitra/utils/: README.md  __init__.py  exceptions.py  exceptions.pyi  logging.pyi
tests/: README.md  __init__.py  conftest.py  requirements-test.txt  test_asgiref_tests.py  test_debug.py  test_error_handling.py  test_event_loop_runner.py  test_global_functions.py  test_palitra.py
tests/core/: __init__.py  test_event_loop_runner.py  test_global_functions.py
tests/edge_cases/: __init__.py  test_error_handling.py
tests/integration/: test_asgiref_compatibility.py
tests/performance/: __init__.py  test_concurrent_operations.py
