[project]
name = "palitra"
version = "0.0.1"
description = "Utils for colored (async/sync) functions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
