[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "palitra"
version = "0.0.1"
description = "Run async functions seamlessly from sync code using a persistent background event loop."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typing_extensions>=4.0.0; python_version < '3.10'"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["LICENSE", "README.md", "palitra/__init__.py", "palitra/core.py"]

[tool.ruff.lint]
select = [
    # pycodestyle errors and warnings
    "E",
    # Pyflakes error checks (unused imports, undefined names, etc.)
    "F",
    # pyupgrade: automatic syntax upgrades for modern Python
    "UP",
    # flake8-bugbear: opinionated code-quality checks
    "B",
    # flake8-simplify: suggestions for simpler code
    "SIM",
    # isort: import sorting issues
    "I",
    # flake8-comprehensions: better comprehension usage (enabled by Ruff implicitly)
    "C",
    # flake8-builtins: avoid shadowing Python builtins
    "A",
    # flake8-annotations: enforce type annotations
    "ANN",
]
[dependency-groups]
dev = [
    "asgiref>=3.8.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "uvloop>=0.21.0; sys_platform != 'win32'",
]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:multiprocessing.popen_fork"]
